Ran some tests to check the process of superposition and values atre not matching; need to investigate

--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -92,16 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "os.chdir('C:\\\\Users\\\\fabiofortkamp\\\\code\\\\TeslaMax\\\\')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -109,10 +111,10 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\fabiofortkamp\\\\code\\\\TeslaMax\\\\teslamax-play-functional'"
+       "'C:\\\\Users\\\\fabiofortkamp\\\\code\\\\TeslaMax'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,22 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'teslamax' from 'C:\\\\Users\\\\fabiofortkamp\\\\code\\\\TeslaMax\\\\teslamax\\\\__init__.py'>"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import importlib\n",
     "importlib.reload(teslamax)"
@@ -155,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +177,7 @@
     "\n",
     "alpha_B_rem_0 = [15,30,45,15,45,135]\n",
     "\n",
-    "params_optimization = teslamax.expand_parameters_from_remanence_array(alpha_B_rem, params_optimization)"
+    "params_optimization = teslamax.expand_parameters_from_remanence_array(alpha_B_rem_0, params_optimization)"
    ]
   },
   {
@@ -198,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -210,7 +201,7 @@
     "    calculated at points.\n",
     "    \n",
     "    For instance, F_II_x[0] is an array of (B_x, B_y), calculated when only the first segment of magnet II\n",
-    "    is magnetized in the x-direction\n",
+    "    is magnetized in the x-direction, with unit remanence\n",
     "    \"\"\"\n",
     "    \n",
     "    n_II = params['n_II']\n",
@@ -226,7 +217,7 @@
     "        F_II_x.append(teslamax.calculate_B_III_from_single_block(point=points, \n",
     "                                                   segment=k+1, \n",
     "                                                   magnet='II', \n",
-    "                                                   magnitude=params[\"B_rem_II_%d\" %(k+1)], \n",
+    "                                                   magnitude=1.0, \n",
     "                                                    angle=0.0, \n",
     "                                                    params=params))\n",
     "        \n",
@@ -234,7 +225,7 @@
     "        F_II_y.append(teslamax.calculate_B_III_from_single_block(point=points, \n",
     "                                                   segment=k+1,\n",
     "                                                   magnet='II', \n",
-    "                                                   magnitude=params[\"B_rem_II_%d\" %(k+1)], \n",
+    "                                                   magnitude=1.0, \n",
     "                                                    angle=90.0, \n",
     "                                                    params=params))\n",
     "\n",
@@ -242,7 +233,7 @@
     "        F_IV_x.append(teslamax.calculate_B_III_from_single_block(point=points, \n",
     "                                                   segment=j+1, \n",
     "                                                   magnet='IV', \n",
-    "                                                   magnitude=params[\"B_rem_IV_%d\" %(j+1)], \n",
+    "                                                   magnitude=1.0, \n",
     "                                                    angle=0.0, \n",
     "                                                    params=params))\n",
     "        \n",
@@ -250,7 +241,7 @@
     "        F_IV_y.append(teslamax.calculate_B_III_from_single_block(point=points, \n",
     "                                                   segment=j+1,\n",
     "                                                   magnet='IV', \n",
-    "                                                   magnitude=params[\"B_rem_IV_%d\" %(j+1)], \n",
+    "                                                   magnitude=1.0, \n",
     "                                                    angle=90.0, \n",
     "                                                    params=params))\n",
     "        \n",
@@ -259,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -268,7 +259,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 6min 25s\n"
+      "Wall time: 39.2 s\n"
      ]
     }
    ],
@@ -284,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -292,22 +283,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[  2.14235719e-02,   2.12416060e-04],\n",
-       "       [  2.11760514e-02,   2.85394691e-04],\n",
-       "       [  2.09236266e-02,   3.99404704e-04],\n",
-       "       ..., \n",
-       "       [  3.07480961e-02,   2.13079073e-05],\n",
-       "       [  3.06646682e-02,  -2.05238288e-05],\n",
-       "       [  3.05784098e-02,  -7.82881143e-05]])"
+       "[array([[  7.37731261e-01,   4.43256741e-04],\n",
+       "        [  7.37145765e-01,   6.05903019e-03],\n",
+       "        [  7.36584283e-01,   1.17638914e-02],\n",
+       "        ..., \n",
+       "        [  6.05522692e-01,  -5.61799964e-03],\n",
+       "        [  6.05699999e-01,  -2.70442733e-03],\n",
+       "        [  6.05905537e-01,   2.48755762e-04]])]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "F_II_x[0]"
+    "F_IV_x"
    ]
   },
   {
@@ -319,69 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  7.00700000e-02,   0.00000000e+00],\n",
-       "       [  7.00678280e-02,   5.51702062e-04],\n",
-       "       [  7.00613123e-02,   1.10336992e-03],\n",
-       "       ..., \n",
-       "       [ -8.98988524e-02,   1.41578407e-03],\n",
-       "       [ -8.99072130e-02,   7.07913977e-04],\n",
-       "       [ -8.99100000e-02,   1.10107994e-17]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "points_air_gap"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  7.00700000e-02,   0.00000000e+00,   2.14235719e-02,\n",
-       "          2.12416060e-04],\n",
-       "       [  7.00678280e-02,   5.51702062e-04,   2.11760514e-02,\n",
-       "          2.85394691e-04],\n",
-       "       [  7.00613123e-02,   1.10336992e-03,   2.09236266e-02,\n",
-       "          3.99404704e-04],\n",
-       "       ..., \n",
-       "       [ -8.98988524e-02,   1.41578407e-03,   3.07480961e-02,\n",
-       "          2.13079073e-05],\n",
-       "       [ -8.99072130e-02,   7.07913977e-04,   3.06646682e-02,\n",
-       "         -2.05238288e-05],\n",
-       "       [ -8.99100000e-02,   1.10107994e-17,   3.05784098e-02,\n",
-       "         -7.82881143e-05]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.concatenate((points_air_gap, F_II_x[0]), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -416,7 +345,7 @@
     "        B_rem = params[\"B_rem_IV_%d\" %(j+1)]\n",
     "        alpha = alpha_B_rem[n_II + j]\n",
     "        \n",
-    "        B = B_rem * (np.cos(alpha) * F_II_x[k] + np.sin(alpha) * F_II_y[k])\n",
+    "        B = B_rem * (np.cos(alpha) * F_IV_x[j] + np.sin(alpha) * F_IV_y[j])\n",
     "        \n",
     "        B_III = B_III + B\n",
     "        \n",
@@ -427,67 +356,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "B_III_data = superposition_B_III(points_air_gap, F_II_x, F_II_y, F_IV_x, F_IV_y, alpha_B_rem_0, params_optimization)\n",
+    "\n",
+    "tmm = TeslaMaxModel(params_optimization, 'teslamax-play')\n",
+    "tmm.run()\n",
+    "\n",
+    "B_III_data_tmm = np.concatenate((points_air_gap,tmm.calculate_B_III_from_position(points_air_gap)),axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 39.5 ms\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([[  7.00700000e-02,   0.00000000e+00,  -4.23752269e-01,\n",
-       "          2.33487607e-04],\n",
-       "       [  7.00678280e-02,   5.51702062e-04,  -4.24025218e-01,\n",
-       "         -3.21006607e-03],\n",
-       "       [  7.00613123e-02,   1.10336992e-03,  -4.24330851e-01,\n",
-       "         -6.61148237e-03],\n",
+       "array([[  7.00700000e-02,   0.00000000e+00,  -1.37195089e-01,\n",
+       "          1.45905609e-03],\n",
+       "       [  7.00678280e-02,   5.51702062e-04,  -1.38547815e-01,\n",
+       "         -1.43446370e-04],\n",
+       "       [  7.00613123e-02,   1.10336992e-03,  -1.39942759e-01,\n",
+       "         -1.52843418e-03],\n",
        "       ..., \n",
-       "       [ -8.98988524e-02,   1.41578407e-03,  -2.89149283e-01,\n",
-       "          7.81516565e-03],\n",
-       "       [ -8.99072130e-02,   7.07913977e-04,  -2.89361565e-01,\n",
-       "          3.82067333e-03],\n",
-       "       [ -8.99100000e-02,   1.10107994e-17,  -2.89602659e-01,\n",
-       "         -2.12854566e-04]])"
+       "       [ -8.98988524e-02,   1.41578407e-03,   4.25040698e-01,\n",
+       "          3.39617110e-01],\n",
+       "       [ -8.99072130e-02,   7.07913977e-04,   5.19492724e-01,\n",
+       "          3.33238165e-01],\n",
+       "       [ -8.99100000e-02,   1.10107994e-17,   6.06939310e-01,\n",
+       "          3.24865232e-01]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "superposition_B_III(points_air_gap, F_II_x, F_II_y, F_IV_x, F_IV_y, alpha_B_rem_0, params_optimization)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This function calculates the functional from a list of such points:"
+    "B_III_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  7.00700000e-02,   0.00000000e+00,   1.25529636e+00,\n",
+       "          1.36774157e-03],\n",
+       "       [  7.00678280e-02,   5.51702062e-04,   1.25371839e+00,\n",
+       "          1.07011951e-02],\n",
+       "       [  7.00613123e-02,   1.10336992e-03,   1.25216625e+00,\n",
+       "          2.02794017e-02],\n",
+       "       ..., \n",
+       "       [ -8.98988524e-02,   1.41578407e-03,   1.24435563e+00,\n",
+       "          1.25194635e-01],\n",
+       "       [ -8.99072130e-02,   7.07913977e-04,   1.28226302e+00,\n",
+       "          1.27829121e-01],\n",
+       "       [ -8.99100000e-02,   1.10107994e-17,   1.31743233e+00,\n",
+       "          1.29740320e-01]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B_III_data_tmm"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And this function calculates the derivative of the functional in respect to the i-th element of `array_B_rem`. Notice that, due to the Principle of Superposition, the calculation of the derivative requires only one extra FEM simulation."
+    "Why do these values differ? This means the Principle of Superposition is not being applied correctly; summing the contributions of each segment is not equal to the full simulation.\n",
+    "\n",
+    "I've checked running the full model with only one segment, with unit remanence and angles of 0 and 90 degress, and then the F-operators match with B_III. That is, each F-operator is being correctly calculated as the contribution of each segment, in the cartesian coordinates. The problem is in the summation."
    ]
   },
   {
