Corrected bug in the calculation of superposition of F-operators where deg2rad conversion was missing

--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +114,7 @@
        "'C:\\\\Users\\\\fabiofortkamp\\\\code\\\\TeslaMax'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -259,7 +259,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 39.2 s\n"
+      "Wall time: 6min 21s\n"
      ]
     }
    ],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -283,22 +283,22 @@
     {
      "data": {
       "text/plain": [
-       "[array([[  7.37731261e-01,   4.43256741e-04],\n",
-       "        [  7.37145765e-01,   6.05903019e-03],\n",
-       "        [  7.36584283e-01,   1.17638914e-02],\n",
-       "        ..., \n",
-       "        [  6.05522692e-01,  -5.61799964e-03],\n",
-       "        [  6.05699999e-01,  -2.70442733e-03],\n",
-       "        [  6.05905537e-01,   2.48755762e-04]])]"
+       "array([[  5.62432887e-01,   1.05041663e-03],\n",
+       "       [  5.61311074e-01,   5.05399649e-03],\n",
+       "       [  5.60215283e-01,   9.26271274e-03],\n",
+       "       ..., \n",
+       "       [  5.55988536e-01,   3.01955227e-03],\n",
+       "       [  5.55688688e-01,   1.45630145e-03],\n",
+       "       [  5.55408745e-01,  -1.23346284e-04]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "F_IV_x"
+    "F_IV_x[0]"
    ]
   },
   {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -334,7 +334,7 @@
     "    n_II = params[\"n_II\"]\n",
     "    for k in range(0,n_II):\n",
     "        B_rem = params[\"B_rem_II_%d\" %(k+1)]\n",
-    "        alpha = alpha_B_rem[k]\n",
+    "        alpha = np.deg2rad(alpha_B_rem[k])\n",
     "    \n",
     "        B = B_rem * (np.cos(alpha) * F_II_x[k] + np.sin(alpha) * F_II_y[k])\n",
     "    \n",
@@ -343,7 +343,7 @@
     "    n_IV = params[\"n_IV\"]\n",
     "    for j in range(0,n_IV):\n",
     "        B_rem = params[\"B_rem_IV_%d\" %(j+1)]\n",
-    "        alpha = alpha_B_rem[n_II + j]\n",
+    "        alpha = np.deg2rad(alpha_B_rem[n_II + j])\n",
     "        \n",
     "        B = B_rem * (np.cos(alpha) * F_IV_x[j] + np.sin(alpha) * F_IV_y[j])\n",
     "        \n",
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -380,22 +380,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[  7.00700000e-02,   0.00000000e+00,  -1.37195089e-01,\n",
-       "          1.45905609e-03],\n",
-       "       [  7.00678280e-02,   5.51702062e-04,  -1.38547815e-01,\n",
-       "         -1.43446370e-04],\n",
-       "       [  7.00613123e-02,   1.10336992e-03,  -1.39942759e-01,\n",
-       "         -1.52843418e-03],\n",
+       "array([[  7.00700000e-02,   0.00000000e+00,   1.22242526e+00,\n",
+       "          1.56684323e-03],\n",
+       "       [  7.00678280e-02,   5.51702062e-04,   1.22074317e+00,\n",
+       "          1.05617420e-02],\n",
+       "       [  7.00613123e-02,   1.10336992e-03,   1.21912067e+00,\n",
+       "          1.98656516e-02],\n",
        "       ..., \n",
-       "       [ -8.98988524e-02,   1.41578407e-03,   4.25040698e-01,\n",
-       "          3.39617110e-01],\n",
-       "       [ -8.99072130e-02,   7.07913977e-04,   5.19492724e-01,\n",
-       "          3.33238165e-01],\n",
-       "       [ -8.99100000e-02,   1.10107994e-17,   6.06939310e-01,\n",
-       "          3.24865232e-01]])"
+       "       [ -8.98988524e-02,   1.41578407e-03,   1.22330154e+00,\n",
+       "          1.19281218e-01],\n",
+       "       [ -8.99072130e-02,   7.07913977e-04,   1.25830943e+00,\n",
+       "          1.25478166e-01],\n",
+       "       [ -8.99100000e-02,   1.10107994e-17,   1.29072077e+00,\n",
+       "          1.30759901e-01]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -414,22 +414,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[  7.00700000e-02,   0.00000000e+00,   1.25529636e+00,\n",
-       "          1.36774157e-03],\n",
-       "       [  7.00678280e-02,   5.51702062e-04,   1.25371839e+00,\n",
-       "          1.07011951e-02],\n",
-       "       [  7.00613123e-02,   1.10336992e-03,   1.25216625e+00,\n",
-       "          2.02794017e-02],\n",
+       "array([[  7.00700000e-02,   0.00000000e+00,   1.22085614e+00,\n",
+       "          1.56976336e-03],\n",
+       "       [  7.00678280e-02,   5.51702062e-04,   1.21917075e+00,\n",
+       "          1.05510198e-02],\n",
+       "       [  7.00613123e-02,   1.10336992e-03,   1.21754479e+00,\n",
+       "          1.98418276e-02],\n",
        "       ..., \n",
-       "       [ -8.98988524e-02,   1.41578407e-03,   1.24435563e+00,\n",
-       "          1.25194635e-01],\n",
-       "       [ -8.99072130e-02,   7.07913977e-04,   1.28226302e+00,\n",
-       "          1.27829121e-01],\n",
-       "       [ -8.99100000e-02,   1.10107994e-17,   1.31743233e+00,\n",
-       "          1.29740320e-01]])"
+       "       [ -8.98988524e-02,   1.41578407e-03,   1.22092052e+00,\n",
+       "          1.19359763e-01],\n",
+       "       [ -8.99072130e-02,   7.07913977e-04,   1.25592566e+00,\n",
+       "          1.25516358e-01],\n",
+       "       [ -8.99100000e-02,   1.10107994e-17,   1.28833396e+00,\n",
+       "          1.30757249e-01]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,22 +439,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Why do these values differ? This means the Principle of Superposition is not being applied correctly; summing the contributions of each segment is not equal to the full simulation.\n",
-    "\n",
-    "I've checked running the full model with only one segment, with unit remanence and angles of 0 and 90 degress, and then the F-operators match with B_III. That is, each F-operator is being correctly calculated as the contribution of each segment, in the cartesian coordinates. The problem is in the summation."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.56912581e-03,  -2.92012654e-06],\n",
+       "       [  1.57241893e-03,   1.07222517e-05],\n",
+       "       [  1.57588007e-03,   2.38239604e-05],\n",
+       "       ..., \n",
+       "       [  2.38102610e-03,  -7.85454235e-05],\n",
+       "       [  2.38377101e-03,  -3.81918781e-05],\n",
+       "       [  2.38680976e-03,   2.65248509e-06]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B_III_data[:,2:] - B_III_data_tmm[:,2:]"
+   ]
   }
  ],
  "metadata": {
