--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -92,7 +92,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "FIGSIZE_CM = 20\n",
+    "FIGSIZE_INCHES = FIGSIZE_CM / 2.54\n",
+    "\n",
+    "FONTSIZE = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +128,7 @@
        "'C:\\\\Users\\\\fabiofortkamp\\\\code\\\\TeslaMax'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,11 +139,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'teslamax' from 'C:\\\\Users\\\\fabiofortkamp\\\\code\\\\TeslaMax\\\\teslamax\\\\__init__.py'>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import importlib\n",
     "importlib.reload(teslamax)"
@@ -250,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -259,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 6min 21s\n"
+      "Wall time: 6min 33s\n"
      ]
     }
    ],
@@ -275,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -283,16 +308,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[  5.62432887e-01,   1.05041663e-03],\n",
-       "       [  5.61311074e-01,   5.05399649e-03],\n",
-       "       [  5.60215283e-01,   9.26271274e-03],\n",
+       "array([[  5.61575250e-01,   1.05151475e-03],\n",
+       "       [  5.60452185e-01,   5.04784509e-03],\n",
+       "       [  5.59355059e-01,   9.24951490e-03],\n",
        "       ..., \n",
-       "       [  5.55988536e-01,   3.01955227e-03],\n",
-       "       [  5.55688688e-01,   1.45630145e-03],\n",
-       "       [  5.55408745e-01,  -1.23346284e-04]])"
+       "       [  5.55588761e-01,   3.03373059e-03],\n",
+       "       [  5.55288376e-01,   1.46317942e-03],\n",
+       "       [  5.55007843e-01,  -1.23864216e-04]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -356,114 +381,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "B_III_data = superposition_B_III(points_air_gap, F_II_x, F_II_y, F_IV_x, F_IV_y, alpha_B_rem_0, params_optimization)\n",
-    "\n",
-    "tmm = TeslaMaxModel(params_optimization, 'teslamax-play')\n",
-    "tmm.run()\n",
-    "\n",
-    "B_III_data_tmm = np.concatenate((points_air_gap,tmm.calculate_B_III_from_position(points_air_gap)),axis=1)"
+    "def calculate_funcional(points,F_II_x, F_II_y, F_IV_x, F_IV_y, alpha_B_rem, params):\n",
+    "    \"\"\"\n",
+    "    Return the funcional based on the lists of F-operators and a vector of remanence angles.\n",
+    "    \n",
+    "    - 'points' is a list of (x,y) points where all of the F-operators are calculated.\n",
+    "    - Each element of 'F_{magnet}_{direction}' is an array of (B_x, B_y) vectors calculated at 'points', \n",
+    "    considering only the effect of that segment\n",
+    "    - 'alpha_B_rem' is a vector of (n_II + n_IV) remanences, where the first n_II represent magnet II and\n",
+    "    the remaining elements represent magnet IV\n",
+    "    - 'params' is a dictionary of parameters\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    B_III_data = superposition_B_III(points, F_II_x, F_II_y, F_IV_x, F_IV_y, alpha_B_rem, params)\n",
+    "    \n",
+    "    # the above statement will return [x,y,B_x,B_y]. We have to calculate the magnitude to pass it\n",
+    "    # to the magnetic profile data\n",
+    "    B_III_data = teslamax.calculate_magnitude(B_III_data)\n",
+    "    \n",
+    "    B_profile_data = teslamax.calculate_magnetic_profile(B_III_data,params)\n",
+    "    \n",
+    "    S = teslamax.calculate_average_high_field(B_profile_data)\n",
+    "    return S"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[  7.00700000e-02,   0.00000000e+00,   1.22242526e+00,\n",
-       "          1.56684323e-03],\n",
-       "       [  7.00678280e-02,   5.51702062e-04,   1.22074317e+00,\n",
-       "          1.05617420e-02],\n",
-       "       [  7.00613123e-02,   1.10336992e-03,   1.21912067e+00,\n",
-       "          1.98656516e-02],\n",
-       "       ..., \n",
-       "       [ -8.98988524e-02,   1.41578407e-03,   1.22330154e+00,\n",
-       "          1.19281218e-01],\n",
-       "       [ -8.99072130e-02,   7.07913977e-04,   1.25830943e+00,\n",
-       "          1.25478166e-01],\n",
-       "       [ -8.99100000e-02,   1.10107994e-17,   1.29072077e+00,\n",
-       "          1.30759901e-01]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.937901298419\n"
+     ]
     }
    ],
    "source": [
-    "B_III_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  7.00700000e-02,   0.00000000e+00,   1.22085614e+00,\n",
-       "          1.56976336e-03],\n",
-       "       [  7.00678280e-02,   5.51702062e-04,   1.21917075e+00,\n",
-       "          1.05510198e-02],\n",
-       "       [  7.00613123e-02,   1.10336992e-03,   1.21754479e+00,\n",
-       "          1.98418276e-02],\n",
-       "       ..., \n",
-       "       [ -8.98988524e-02,   1.41578407e-03,   1.22092052e+00,\n",
-       "          1.19359763e-01],\n",
-       "       [ -8.99072130e-02,   7.07913977e-04,   1.25592566e+00,\n",
-       "          1.25516358e-01],\n",
-       "       [ -8.99100000e-02,   1.10107994e-17,   1.28833396e+00,\n",
-       "          1.30757249e-01]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B_III_data_tmm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  1.56912581e-03,  -2.92012654e-06],\n",
-       "       [  1.57241893e-03,   1.07222517e-05],\n",
-       "       [  1.57588007e-03,   2.38239604e-05],\n",
-       "       ..., \n",
-       "       [  2.38102610e-03,  -7.85454235e-05],\n",
-       "       [  2.38377101e-03,  -3.81918781e-05],\n",
-       "       [  2.38680976e-03,   2.65248509e-06]])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B_III_data[:,2:] - B_III_data_tmm[:,2:]"
+    "S_0 = calculate_funcional(points_air_gap,F_II_x,F_II_y,F_IV_x, F_IV_y, alpha_B_rem_0,params_optimization)\n",
+    "print(S_0)"
    ]
   }
  ],
