Created function to calculate derivative of the functional

--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -431,6 +431,70 @@
     "S_0 = calculate_funcional(points_air_gap,F_II_x,F_II_y,F_IV_x, F_IV_y, alpha_B_rem_0,params_optimization)\n",
     "print(S_0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def calculate_funcional_derivative(points,F_II_x, F_II_y, F_IV_x, F_IV_y, alpha_B_rem, i,params):\n",
+    "    \"\"\"\n",
+    "    Return the derivative of the funcional in respect to the i-th element of the remanence angles vector.\n",
+    "    \n",
+    "    - 'points' is a list of (x,y) points where all of the F-operators are calculated.\n",
+    "    - Each element of 'F_{magnet}_{direction}' is an array of (B_x, B_y) vectors calculated at 'points', \n",
+    "    considering only the effect of that segment\n",
+    "    - 'alpha_B_rem' is a vector of (n_II + n_IV) remanences, where the first n_II represent magnet II and\n",
+    "    the remaining elements represent magnet IV\n",
+    "    - 'i' is the element (0-based) in respect to which the derivative is being evaluated\n",
+    "    - 'params' is a dictionary of parameters\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    S = calculate_funcional(points,F_II_x, F_II_y, F_IV_x, F_IV_y, alpha_B_rem, params)\n",
+    "    \n",
+    "    alpha_B_rem_plus = alpha_B_rem.copy()\n",
+    "    delta = 1e-6\n",
+    "    alpha_B_rem_plus[i]  = alpha_B_rem_plus[i] + delta\n",
+    "    \n",
+    "    S_plus = calculate_funcional(points,F_II_x, F_II_y, F_IV_x, F_IV_y, alpha_B_rem_plus, params)\n",
+    "    \n",
+    "    dS = (S_plus - S)/delta\n",
+    "    \n",
+    "    return dS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.00154200641145\n"
+     ]
+    }
+   ],
+   "source": [
+    "dS_0 = calculate_funcional_derivative(points_air_gap,F_II_x,F_II_y,F_IV_x, F_IV_y, alpha_B_rem_0, 2, params_optimization)\n",
+    "print(dS_0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
