Transferred functions to create F-operators for the PreDesign class

--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -84,7 +84,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import teslamax\n",
-    "from teslamax import TeslaMaxModel\n",
+    "from teslamax import TeslaMaxGeometry, TeslaMaxPreDesign, TeslaMaxModel\n",
     "\n",
     "\n",
     "\n",
@@ -150,7 +150,8 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -216,9 +217,7 @@
     "              \"mu_r_iron\": 5e3,\n",
     "             }\n",
     "\n",
-    "alpha_B_rem_0 = [15,30,45,15,45,135]\n",
-    "\n",
-    "params_optimization = teslamax.expand_parameters_from_remanence_array(alpha_B_rem_0, params_optimization)"
+    "alpha_B_rem_0 = [15,30,45,15,45,135]\n"
    ]
   },
   {
@@ -236,67 +235,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def calculate_F_operators(points, params):\n",
-    "    \"\"\"\n",
-    "    Return (F_II_x, F_II_y, F_IV_x, F_IV_y), where each element is a list of the F-operators vector fields\n",
-    "    calculated at points.\n",
-    "    \n",
-    "    For instance, F_II_x[0] is an array of (B_x, B_y), calculated when only the first segment of magnet II\n",
-    "    is magnetized in the x-direction, with unit remanence\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    n_II = params['n_II']\n",
-    "    n_IV = params['n_IV']\n",
-    "        \n",
-    "    F_II_x = []\n",
-    "    F_II_y = []\n",
-    "    \n",
-    "    F_IV_x = []\n",
-    "    F_IV_y = []\n",
-    "    \n",
-    "    for k in range(0,n_II):\n",
-    "        F_II_x.append(teslamax.calculate_B_III_from_single_block(point=points, \n",
-    "                                                   segment=k+1, \n",
-    "                                                   magnet='II', \n",
-    "                                                   magnitude=1.0, \n",
-    "                                                    angle=0.0, \n",
-    "                                                    params=params))\n",
-    "        \n",
-    "        \n",
-    "        F_II_y.append(teslamax.calculate_B_III_from_single_block(point=points, \n",
-    "                                                   segment=k+1,\n",
-    "                                                   magnet='II', \n",
-    "                                                   magnitude=1.0, \n",
-    "                                                    angle=90.0, \n",
-    "                                                    params=params))\n",
-    "\n",
-    "    for j in range(0,n_IV):\n",
-    "        F_IV_x.append(teslamax.calculate_B_III_from_single_block(point=points, \n",
-    "                                                   segment=j+1, \n",
-    "                                                   magnet='IV', \n",
-    "                                                   magnitude=1.0, \n",
-    "                                                    angle=0.0, \n",
-    "                                                    params=params))\n",
-    "        \n",
-    "        \n",
-    "        F_IV_y.append(teslamax.calculate_B_III_from_single_block(point=points, \n",
-    "                                                   segment=j+1,\n",
-    "                                                   magnet='IV', \n",
-    "                                                   magnitude=1.0, \n",
-    "                                                    angle=90.0, \n",
-    "                                                    params=params))\n",
-    "        \n",
-    "    return (F_II_x, F_II_y, F_IV_x, F_IV_y)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -305,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -325,7 +263,9 @@
     "R_g = params_optimization[\"R_o\"] + params_optimization[\"h_gap\"]\n",
     "points_air_gap = teslamax.generate_sector_mesh_points(1.001*R_o,0.999*R_g,0.0,np.pi)\n",
     "\n",
-    "F_II_x, F_II_y, F_IV_x, F_IV_y = calculate_F_operators(points_air_gap, params_optimization)"
+    "tmpd = TeslaMaxPreDesign(params_optimization)\n",
+    "\n",
+    "F_II_x, F_II_y, F_IV_x, F_IV_y = tmpd.calculate_F_operators(points_air_gap)"
    ]
   },
   {
@@ -337,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -345,16 +285,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[  5.61673439e-01,   1.05131665e-03],\n",
-       "       [  5.60550597e-01,   5.04850780e-03],\n",
-       "       [  5.59453707e-01,   9.25100144e-03],\n",
+       "array([[  5.61756084e-01,   1.05129344e-03],\n",
+       "       [  5.60633272e-01,   5.04914805e-03],\n",
+       "       [  5.59536416e-01,   9.25230119e-03],\n",
        "       ..., \n",
-       "       [  5.55362700e-01,   3.04277009e-03],\n",
-       "       [  5.55061965e-01,   1.46756487e-03],\n",
-       "       [  5.54781049e-01,  -1.24193699e-04]])"
+       "       [  5.55810806e-01,   3.02591752e-03],\n",
+       "       [  5.55510717e-01,   1.45938969e-03],\n",
+       "       [  5.55230510e-01,  -1.23577793e-04]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
