--- a/TeslaMax Superposition.ipynb
+++ b/TeslaMax Superposition.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import teslamax\n",
-    "from teslamax import TeslaMaxModel\n",
+    "from teslamax import TeslaMaxGeometry, TeslaMaxPreDesign,TeslaMaxModel\n",
     "\n",
     "\n",
     "\n",
@@ -174,10 +174,8 @@
     "                \"h_fc\": 0.010,\n",
     "                \"R_e\": 2,\n",
     "                \"n_IV\": 1,\n",
-    "                \"alpha_rem_IV_1\": 15,\n",
     "                \"phi_S_IV\": 45,\n",
     "                \"n_II\": 1,\n",
-    "                \"alpha_rem_II_1\": 15,\n",
     "                \"phi_C_II\": 0,\n",
     "                \"phi_S_II\": 45,\n",
     "                \"B_rem_II_1\": 1.4,\n",
@@ -187,7 +185,10 @@
     "                \"linear_iron\": 1,\n",
     "                \"mu_r_iron\": 5e3,\n",
     "             }\n",
-    "\n"
+    "\n",
+    "alpha_rem_vector = np.array([15, 15])\n",
+    "\n",
+    "tmpd = TeslaMaxPreDesign(param_dict)"
    ]
   },
   {
@@ -206,7 +207,7 @@
    },
    "outputs": [],
    "source": [
-    "tmm = TeslaMaxModel(params=param_dict,\n",
+    "tmm = TeslaMaxModel(tmpd, alpha_rem_vector,\n",
     "                   path=teslamax_playground)"
    ]
   },
@@ -258,7 +259,7 @@
     {
      "data": {
       "text/plain": [
-       "array([  1.06991003e+00,   9.56113179e-04])"
+       "array([  1.06990914e+00,   9.56117666e-04])"
       ]
      },
      "execution_count": 9,
@@ -282,34 +283,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  6.72254155e-01,   4.11650470e-04])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B_outer = teslamax.calculate_B_III_from_single_block(point=point_gap,\n",
-    "                                           angle=param_dict[\"alpha_rem_IV_1\"],\n",
-    "                                           magnet='IV',\n",
-    "                                           magnitude=param_dict[\"B_rem_IV_1\"],\n",
-    "                                           params=param_dict,\n",
-    "                                            segment=1)[0]\n",
-    "B_outer"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {
     "collapsed": false
@@ -318,25 +291,7 @@
     {
      "data": {
       "text/plain": [
-       "{'B_rem_II_1': 1.4,\n",
-       " 'B_rem_IV_1': 1.4,\n",
-       " 'R_e': 2,\n",
-       " 'R_i': 0.015,\n",
-       " 'R_o': 0.07,\n",
-       " 'R_s': 0.14,\n",
-       " 'alpha_rem_II_1': 15,\n",
-       " 'alpha_rem_IV_1': 15,\n",
-       " 'h_fc': 0.01,\n",
-       " 'h_gap': 0.02,\n",
-       " 'linear_iron': 1,\n",
-       " 'mu_r_II': 1.05,\n",
-       " 'mu_r_IV': 1.05,\n",
-       " 'mu_r_iron': 5000.0,\n",
-       " 'n_II': 1,\n",
-       " 'n_IV': 1,\n",
-       " 'phi_C_II': 0,\n",
-       " 'phi_S_II': 45,\n",
-       " 'phi_S_IV': 45}"
+       "array([  6.72254456e-01,   4.11644303e-04])"
       ]
      },
      "execution_count": 11,
@@ -345,7 +300,12 @@
     }
    ],
    "source": [
-    "param_dict"
+    "B_outer = tmpd.calculate_B_III_from_single_block(point=point_gap,\n",
+    "                                           angle=alpha_rem_vector[1],\n",
+    "                                           magnet='IV',\n",
+    "                                           magnitude=param_dict[\"B_rem_IV_1\"],\n",
+    "                                            segment=1)[0]\n",
+    "B_outer"
    ]
   },
   {
@@ -357,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -365,20 +325,19 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.39766072,  0.00054446])"
+       "array([ 0.39766004,  0.00054446])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "B_inner = teslamax.calculate_B_III_from_single_block(point=point_gap,\n",
-    "                                           angle=param_dict[\"alpha_rem_II_1\"],\n",
+    "B_inner = tmpd.calculate_B_III_from_single_block(point=point_gap,\n",
+    "                                           angle=alpha_rem_vector[0],\n",
     "                                           magnet='II',\n",
     "                                           magnitude=param_dict[\"B_rem_II_1\"],\n",
-    "                                           params=param_dict,\n",
     "                                            segment=1)[0]\n",
     "B_inner"
    ]
@@ -392,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -400,10 +359,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ -4.83922949e-06,   1.58277216e-09])"
+       "array([ -5.35468695e-06,   1.73350394e-08])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -429,10 +388,10 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.0004523 ,  0.00016554])"
+       "array([-0.00050048,  0.00181307])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,6 +399,15 @@
    "source": [
     "(B_total - (B_outer + B_inner))/B_total * 100 # in percentage\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
