Tested the use of gradient and hessian to verify the optimality of the gradient

--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -528,12 +528,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alpha[0] = 19.89, S = 0.0478429\n",
-      "alpha[1] = 70.72, S = 0.0502225\n",
-      "alpha[2] = 5.55, S = 0.0553267\n",
-      "alpha[3] = 45.43, S = 0.0420405\n",
-      "alpha[4] = 42.52, S = 0.0425443\n",
-      "alpha[5] = 109.95, S = 0.0591281\n"
+      "alpha[0] = 20.02, S = 0.0478426\n",
+      "alpha[1] = 70.85, S = 0.0502304\n",
+      "alpha[2] = 5.52, S = 0.0553456\n",
+      "alpha[3] = 45.06, S = 0.0423122\n",
+      "alpha[4] = 43.37, S = 0.0426643\n",
+      "alpha[5] = 110.38, S = 0.0591668\n"
      ]
     }
    ],
@@ -604,31 +604,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Checking optimality conditions:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[  7.00700000e-02,   0.00000000e+00],\n",
-       "       [  7.00678280e-02,   5.51702062e-04],\n",
-       "       [  7.00613123e-02,   1.10336992e-03],\n",
-       "       ..., \n",
-       "       [ -8.98988524e-02,   1.41578407e-03],\n",
-       "       [ -8.99072130e-02,   7.07913977e-04],\n",
-       "       [ -8.99100000e-02,   1.10107994e-17]])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  9.37093458e-06  -1.46938871e-04  -1.13317668e-04  -9.67260876e-04\n",
+      "  -2.51124795e-04  -5.99582217e-04]\n"
+     ]
     }
    ],
    "source": [
-    "tmpd.get_points_F_operators()"
+    "grad_alpha_optimal = tmpd.calculate_functional_gradient(alpha_B_rem)\n",
+    "print(grad_alpha_optimal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ -1.23422732e-04   5.02900917e-05   1.41384317e-05  -4.51537145e-05\n",
+      "  -1.01347036e-05  -2.44952511e-05]\n"
+     ]
+    }
+   ],
+   "source": [
+    "hessian_alpha_optimal = tmpd.calculate_functional_hessian(alpha_B_rem)\n",
+    "print(np.linalg.eigvals(hessian_alpha_optimal))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the calculated point is far from optimal, because it is not a stationary point (its gradient is not null) and the hessian matrix is indefinite."
    ]
   },
   {
