Remanence magnitudes are specified automatically as a function of the number of segments

--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -691,9 +691,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -703,25 +703,31 @@
     "                \"R_s\": 0.150,\n",
     "                \"h_fc\": 0.010,\n",
     "                \"R_e\": 2,\n",
-    "                \"n_IV\": 3,\n",
+    "                \"n_IV\": 4,\n",
     "                \"phi_S_IV\": 45,\n",
-    "                \"n_II\": 3,\n",
+    "                \"n_II\": 4,\n",
     "                \"phi_C_II\": 15,\n",
     "                \"phi_S_II\": 45,\n",
-    "                \"B_rem_II_1\": 1.4,\n",
-    "                \"B_rem_II_2\": 1.4,\n",
-    "                \"B_rem_II_3\": 1.4,\n",
     "                \"mu_r_II\": 1.05,\n",
-    "                \"B_rem_IV_1\": 1.4,\n",
-    "                \"B_rem_IV_2\": 1.4,\n",
-    "                \"B_rem_IV_3\": 1.4,\n",
     "                \"mu_r_IV\": 1.05,\n",
     "              \"linear_iron\": 1,\n",
     "              \"mu_r_iron\": 5e3,\n",
     "             }\n",
-    "alpha_B_rem_0 = [15,30,45,15,45,135]\n",
     "\n",
-    "n = len(alpha_B_rem_0)\n",
+    "n_II = params_optimization[\"n_II\"]\n",
+    "n_IV = params_optimization[\"n_IV\"]\n",
+    "\n",
+    "n = n_II + n_IV\n",
+    "\n",
+    "B_rem = 1.4\n",
+    "\n",
+    "# expand parameters to include remanence magnitudes for each segment\n",
+    "params_optimization = teslamax.expand_parameters_from_remanence_array(B_rem*np.ones(n), \n",
+    "                                                                      params_optimization, \n",
+    "                                                                      \"B_rem\")\n",
+    "\n",
+    "alpha_B_rem_0 = np.zeros(n)\n",
+    "\n",
     "\n",
     "tmpd = TeslaMaxPreDesign(params_optimization)"
    ]
